--- a/package.json
+++ b/package.json
@@ -13,20 +13,91 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/forms": "~8.2.14",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
-    "@ionic-native/core": "^5.0.0",
-    "@ionic-native/splash-screen": "^5.0.0",
-    "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^5.0.0",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.5.1",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "@angular/animations": "8.2.1",
+    "@angular/common": "8.2.1",
+    "@angular/core": "8.2.1",
+    "@angular/forms": "8.2.1",
+    "@angular/platform-browser": "8.2.1",
+    "@angular/platform-browser-dynamic": "8.2.1",
+    "@angular/router": "8.2.1",
+    "@ionic-native/app-availability": "5.22.0",
+    "@ionic-native/app-version": "5.22.0",
+    "@ionic-native/call-number": "5.22.0",
+    "@ionic-native/core": "5.22.0",
+    "@ionic-native/device": "5.22.0",
+    "@ionic-native/diagnostic": "5.22.0",
+    "@ionic-native/dialogs": "5.22.0",
+    "@ionic-native/fabric": "5.22.0",
+    "@ionic-native/geolocation": "5.22.0",
+    "@ionic-native/http": "5.22.0",
+    "@ionic-native/in-app-browser": "5.22.0",
+    "@ionic-native/ionic-webview": "5.22.0",
+    "@ionic-native/keyboard": "5.22.0",
+    "@ionic-native/keychain-touch-id": "5.22.0",
+    "@ionic-native/location-accuracy": "5.22.0",
+    "@ionic-native/market": "5.22.0",
+    "@ionic-native/screen-orientation": "5.22.0",
+    "@ionic-native/splash-screen": "5.22.0",
+    "@ionic-native/status-bar": "5.22.0",
+    "@ionic/angular": "^5.0.4",
+    "@ionic/storage": "2.2.0",
+    "@types/chart.js": "2.9.14",
+    "@types/gsap": "^1.20.2",
+    "@types/stacktrace-js": "2.0.3",
+    "aes-js": "3.1.2",
+    "base64-js": "1.2.3",
+    "call-number": "1.0.1",
+    "camelcase-object-deep": "1.1.1",
+    "chart.js": "2.9.3",
+    "com.lampa.startapp": "6.1.6",
+    "cordova-android": "8.1.0",
+    "cordova-fabric-plugin": "1.1.14-dev",
+    "cordova-ios": "5.1.1",
+    "cordova-plugin-advanced-http": "2.4.1",
+    "cordova-plugin-app-launcher": "0.4.0",
+    "cordova-plugin-app-version": "0.1.9",
+    "cordova-plugin-appavailability": "0.4.2",
+    "cordova-plugin-customurlscheme": "5.0.1",
+    "cordova-plugin-device": "2.0.3",
+    "cordova-plugin-dialogs": "2.0.2",
+    "cordova-plugin-file": "6.0.2",
+    "cordova-plugin-geolocation": "4.0.2",
+    "cordova-plugin-inappbrowser": "3.2.0",
+    "cordova-plugin-ionic-keyboard": "2.2.0",
+    "cordova-plugin-ionic-webview": "4.1.3",
+    "cordova-plugin-jailbreak-detection": "0.1.0",
+    "cordova-plugin-keychain-touch-id": "git+https://github.com/sjhoeksma/cordova-plugin-keychain-touch-id.git",
+    "cordova-plugin-market": "1.2.0",
+    "cordova-plugin-privacyscreen": "^0.4.0",
+    "cordova-plugin-request-location-accuracy": "2.3.0",
+    "cordova-plugin-root-detection": "0.1.1",
+    "cordova-plugin-screen-orientation": "3.0.2",
+    "cordova-plugin-splashscreen": "5.0.3",
+    "cordova-plugin-statusbar": "2.4.3",
+    "cordova-plugin-whitelist": "1.3.4",
+    "cordova-sqlite-storage": "4.0.0",
+    "cordova.plugins.diagnostic": "~5.0.1",
+    "core-js": "3.6.4",
+    "date-fns": "1.30.1",
+    "eruda": "2.2.0",
+    "es6-promise-plugin": "4.2.2",
+    "gsap": "^3.2.1",
+    "hammerjs": "2.0.8",
+    "lodash": "4.17.15",
+    "moment": "2.24.0",
+    "mx.ferreyra.callnumber": "0.0.2",
+    "path": "^0.12.7",
+    "pkcs7": "1.0.2",
+    "rxjs": "~6.5.2",
+    "sentry-cordova": "0.17.0",
+    "sha256": "0.2.0",
+    "stacktrace-js": "2.0.2",
+    "uuid": "7.0.1",
+    "xcode": "^2.0.0",
+    "zone.js": "0.10.2"
+  },
+  "dependenciesComments": {
+    "sentry-cordova": "Is currently locked to version 0.14.0 with newest version being 0.16.0 while waiting for following issue to be fixed https://github.com/getsentry/sentry-cordova/issues/146"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.20",
